<resources>
    <string name="app_name">1171832JumanaFinalProj</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about">About</string>
    <string name="filter">Filter</string>
    <string name="_970_056_991_67_52">+970 (056) 991-67-52</string>
    <string name="open_until_11_00_pm">Open Until 11:00 PM</string>
    <string name="_3221_mainstreet_birzeit">3221,MainStreet Birzeit.</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="map">Map</string>
    <string name="about_us">About US</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="text_home_page">In 2008, Mr. John decided to start his own project. He started with an old car renting it for people,then bought many cars one by one. Now, his company is one of the biggest car rental companies.</string>
    <string name="title_activity_admin">AdminActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_admin_side">AdminSideActivity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_new_admin">Add new Admin</string>
    <string name="account_icon">Account icon</string>
    <string name="import_image">Import image</string>
    <string name="take_photo">Take photo</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
</resources>